--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "lucide-react": "^0.555.0",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.68.0",
